# VibeVoice-ROCm

./: .env-sample  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_vibevoice.bat  tatus  test_debug.py
demo/: gradio_demo.py  inference_from_file.py
